# xml2json-rb

./: .gitignore  .rtx.toml  .rubocop.yml  .yardopts  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  tmp.rs  versions.ipynb  xml2json.gemspec
.github/workflows/: docs.yml  main.yml  release.yml  ruby_versions.rb
actions/: check_version.rb  ruby_versions.rb
docs/: Xml2Json.html  _index.html  class_list.html  file.README.html  index.html  method_list.html  top-level-namespace.html
docs/Xml2Json/: Json.html  Xml.html
docs/Xml2Json/Xml/: Encoding.html  Version.html
ext/xml2json/: Cargo.toml  build.rs  extconf.rb  jruby_cargo_builder.rb
ext/xml2json/io/github/uvlad7/xml2json/: Xml.java  Xml2JsonService.java
ext/xml2json/jagnus/: Cargo.toml  jbindgen.rb  jni_function.rb  jni_static_function.rb  tmp.rs
ext/xml2json/jagnus/sig/j_bindgen/: codegen.rbs  java_class.rbs  java_method.rbs
ext/xml2json/jagnus/src/: jni_function.rb  jni_function.rs  jni_static_function.rb  jni_static_function.rs  lib.rs
ext/xml2json/jagnus/src/java/: jni_static_function.rs  mod.rs
ext/xml2json/jagnus/src/jruby/sys/java/org/: jruby.rs  mod.rs
ext/xml2json/jagnus/src/jruby/sys/java/org/jruby/: mod.rs  ruby.rs  ruby_module.rs
ext/xml2json/jagnus/src/jruby/sys/java/org/jruby/runtime/: mod.rs  thread_context.rs
ext/xml2json/src/: jni.rs  lib.rs  magnus.rs  mri.rs  mri_args.rs  mri_errors.rs
ext/xml2json/src/jni/java/org/: jruby.rs
ext/xml2json/xml2json/: Xml2JsonService.java
lib/: xml2json.rb
lib/xml2json/: jruby.rb  version.rb
sig/: examples.rbs  xml2json.rbs
sig/xml2_json/: json.rbs  xml.rbs
sig/xml2_json/xml/: encoding.rbs  version.rbs
spec/: examples.rb  known_issues.json  spec_helper.rb  xml2json_spec.rb
spec/lib/: json.js  package.json
yard-ghpages/: yard-ghpages.rb
yard-ghpages/yard-ghpages/: branch_merger.rb  version.rb
