[package]
name = "xml2json"
version = "0.3.1"
edition = "2021"
authors = ["uvlad7 <uvlad7@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21.1", optional = true }
#jni-utils = { version = "0.1.1", features = ["build-java-support"] }
#jni-utils = { version = "0.1.1", optional = true }
magnus = { version = "0.5.5", features = ["rb-sys-interop"], optional = true }
rb-sys = { version = "*", default-features = false, features = [
    "stable-api-compiled-fallback",
], optional = true }
#robusta_jni = { version = "0.2.2", optional = true }
xml2json-rs = "1.0.1"

[features]
mri = ["dep:magnus"]
jruby = ["dep:jni"]
