[package]
name = "xml2json"
version = "0.3.2"
edition = "2021"
authors = ["uvlad7 <uvlad7@gmail.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.5.5", features = ["rb-sys-interop"] }
rb-sys = { version = "*", default-features = false, features = [
    "stable-api-compiled-fallback",
] }
xml2json-rs = "1.0.1"
